--- a/Game/Script/Data/languages/english.json
+++ b/Game/Script/Data/languages/english.json
@@ -44,11 +44,11 @@
             },
             "page_3": {
                 "title": "Game valuation",
-                "content": "::ICONS3 ::ICONS4 ::ICONS5 ::ICONS6 ::ICONS7 ::ICONS8 The sum of each dice color. <br> ::ICONS0 ::ICONS1  ::ICONS2 The sum of each dice number.<br> ::ICONS9 Doubles with same color give 10 points. <br> ::ICONS10 The sum of all dice showing 1, 2 or 3. <br> ::ICONS11 The sum of all dice."
+                "content": "The sum of each dice number.<br>The sum of each dice color. <br>Doubles with same color give 10 points. <br>The sum of all dice showing 1 2 3. <br>The sum of all dice."
             },
             "page_4": {
                 "title": "Game example",
-                "content": "::EXAMPLE ::ICONS0 Score: 8 (2 Dice x 4 Dice number)<br> ::ICONS4 Score: 4 (Dice number 3 + Dice number 1)<br> ::ICONS9 Score: 20 (Doubles Red 10 + Doubles Green 10)<br> ::ICONS10 Score: 16 (Dice 1 + Dice 2 + Dice 3 + ...)<br> ::ICONS11 Score: 42 (Dice 1 + Dice 2 + Dice 3 + ...)"
+                "content": "Score: 8 (2 Dice x 4 Dice number)<br>Score: 4 (Dice number 3 + Dice number 1)<br>Score: 20 (Doubles Red 10 + Doubles Green 10)<br>Score: 16 (Dice 1 + Dice 2 + Dice 3 + ...)<br>Score: 42 (Dice 1 + Dice 2 + Dice 3 + ...)"
             }
         },
         "settings": {
