feat: add expired room alerts and main menu online status

--- a/Game/Script/Data/languages/english.json
+++ b/Game/Script/Data/languages/english.json
@@ -22,7 +22,8 @@
             "list": {
                 "title": "Multiplayer",
                 "create_button": "create",
-                "join_button": "join"
+                "join_button": "join",
+                "alert": "Room unavailable"
             },
             "lobby": {
                 "title": "Game",
