--- a/Game/Script/Data/languages/german.json
+++ b/Game/Script/Data/languages/german.json
@@ -59,6 +59,9 @@
                 "german": "Deutsch"
             }
         },
+        "gamesettings": {
+            "title": "Spieleinstellungen"
+        },
         "player": "Spieler",
         "alerts": {
             "invalid_tokes": "Nur alphabetische oder numerische Zeichen!",
