feat: add roompasswords

--- a/Game/Script/Data/languages/english.json
+++ b/Game/Script/Data/languages/english.json
@@ -60,7 +60,13 @@
             }
         },
         "gamesettings": {
-            "title": "Game Settings"
+            "title": "Game Settings",
+            "gameSettings": {
+
+            },
+            "multiplayer": {
+                "password": "Password"
+            }
         },
         "player": "Player",
         "alerts": {
