--- a/Game/Script/Data/languages/german.json
+++ b/Game/Script/Data/languages/german.json
@@ -18,7 +18,8 @@
             "list": {
                 "title": "Mehrspieler",
                 "create_button": "Erstellen",
-                "join_button": "Beitreten"
+                "join_button": "Beitreten",
+                "password": "Passwort eingeben"
             },
             "lobby": {
                 "title": "Spiel",
