feat: add optional category overview and languages

--- a/Game/Script/Data/languages/english.json
+++ b/Game/Script/Data/languages/english.json
@@ -60,6 +60,9 @@
                 "title": "Language",
                 "english": "English",
                 "german": "German"
+            },
+            "help_category_hud": {
+                "title": "Category Overview"
             }
         },
         "gamesettings": {
