--- a/Game/Script/Data/languages/german.json
+++ b/Game/Script/Data/languages/german.json
@@ -9,9 +9,6 @@
                     "normal": "mittel",
                     "hard": "schwer"
                 }
-            },
-            "lobby_settings": {
-                "title": "Lobby Einstellungen"
             }
         },
         "multiplayer": {
@@ -67,13 +64,10 @@
         },
         "gamesettings": {
             "title": "Spieleinstellungen",
-            "gameSettings": {
-
-            },
-            "multiplayer": {
-                "password_switch": "Private Lobby", 
-                "password": "Passwort"
-            }
+            "password_switch": "Private Lobby", 
+            "password": "Passwort",
+            "round_timer": "Rundenzeit",
+            "round_timer_unit": "Sek."
         },
         "player": "Spieler",
         "alerts": {
