feat: make summary skippable

--- a/Game/Script/Data/languages/english.json
+++ b/Game/Script/Data/languages/english.json
@@ -93,7 +93,8 @@
             "title": "Choose a category"
         },
         "summary": {
-            "sum": "sum"
+            "sum": "sum",
+            "skip": "Skip?"
         },
         "validation": {
             "wait_for_validation": "Wait for all player to choose"
